# editor_lab

./: CMakeLists.txt  README.md  main.cpp
commands/: backspaceCommand.cpp  backspaceCommand.hpp  command.hpp  emptyCommand.cpp  emptyCommand.hpp  shiftleftCommand.cpp  shiftleftCommand.hpp  shiftrightCommand.cpp  shiftrightCommand.hpp  typeCommand.cpp  typeCommand.hpp
editor/: editor.cpp  editor.hpp
invoker/: invoker.cpp  invoker.hpp
